uploaded third part, organized code and rewrote notes

--- a/views/allStudents.hbs
+++ b/views/allStudents.hbs
@@ -3,7 +3,7 @@
 <ul>
     {{#each allStudents}}
     <li>
-        {{this.name}} {{this.lastName}}
+        <a href="/student/{{this._id}}">{{this.name}} {{this.lastName}}</a>
     </li>
     {{/each}}
 </ul>
