--- a/views/newStudent.hbs
+++ b/views/newStudent.hbs
@@ -15,4 +15,4 @@
     <option value="B">B</option>
 </select>
 
-<button id="create-student-button" class="btn btn-primary">Create student</button>
+<button id="create-student" class="btn btn-success">Create student</button>
