--- a/views/student.hbs
+++ b/views/student.hbs
@@ -1,3 +1,18 @@
 <h1>Student data:</h1>
-
 <p>{{this.name}} {{this.lastName}}, class: {{this.class}}</p>
+
+<p>Pending bills:</p>
+<select name="pendingBills" id="pendingBills-edit">
+    <option value="true">YES</option>
+    <option value="false">NO</option>
+</select>
+
+<p>Student's class:</p>
+<select name="class" id="class-edit">
+    <option value="A">A</option>
+    <option value="B">B</option>
+</select>
+
+{{!-- Store _id to identify the student and pass it from the frontnd to the backend --}}
+<button data={{this._id}} id="edit-student" class="btn btn-success">Edit student</button>
+<button data={{this._id}} id="delete-student" class="btn btn-danger">Delete student</button>
