--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,27 +4,49 @@
 <head>
     <meta charset="utf-8" />
     <title>Mirasierra School</title>
-    {{!-- bootstrap css --}}
+    {{!-- Bootstrap CSS --}}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <body class="text-light bg-dark">
 
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">Mirasierra School</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" aria-current="page" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" href="/all-students">Students</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" href="/new-student">New Student</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
     <main>
         {{{ body }}}
     </main>
 
-
-    {{!-- bootstrap js --}}
+    {{!-- Bootstrap JS --}}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 
-    {{!-- axios cdn --}}
+    {{!-- Axios CDN --}}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.24.0/axios.min.js"></script>
 
-    {{!-- own js --}}
+    {{!-- Own FRONTEND JS --}}
     <script src="/script.js"></script>
 </body>
 
