added pending bills field on new student creation

--- a/views/newStudent.hbs
+++ b/views/newStudent.hbs
@@ -15,4 +15,10 @@
     <option value="B">B</option>
 </select>
 
+<p>Pending bills:</p>
+<select name="pendingBills" id="pendingBills">
+    <option value="true">YES</option>
+    <option value="false">NO</option>
+</select>
+
 <button id="create-student" class="btn btn-success">Create student</button>
